# ducati-parts-claude-skill

./: .env.example  .gitignore  CLAUDE.md  Issues - Pending Items.md  LICENSE  README.md  pyproject.toml
config/: config.yaml
config/launchd/: com.ducati-parts.watcher.plist
data/seed/: multistrada_1260_enduro.json
docs/design/: plan-001-adapter-diagnostics-and-selector-fix.md
graphify-out/: .graphify_ast.json  .graphify_detect.json  .graphify_extract.json  .graphify_python  .graphify_semantic.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
src/: cli.py
src/adapters/: allegro.py  base.py  bazos.py  bmotor.py  bolha.py  cheshire_breakers.py  colchester_breakers.py  desguaces_pedros.py  desmomarket.py  dezosmoto.py  dgarageparts.py  duc_store.py  ducatimondo.py  ducatiparts_cz.py  ducbikeparts.py  ebay.py  eramotoricambi.py  facebook.py  forza_moto.py  fresiamoto.py  ital_allparts.py  jofogas.py  kleinanzeigen.py  leboncoin.py  maleducati.py  moto_breakers.py  motodesguace_ferrer.py  motogrotto.py  motoricambi.py  olx.py  (+9 more)
test_scripts/: selector_tester.py  smoke_test_exhaust.py  smoke_test_live.py  test_adapter_base.py  test_catalog.py  test_cli.py  test_condition.py  test_config.py  test_currency.py  test_database.py  test_diagnostic_tools.py  test_ebay_adapter.py  test_html_report.py  test_olx_adapter.py  test_playwright_base.py  test_query_expansion.py  test_registry.py  test_search.py  test_shipping.py  test_skeleton_adapters.py  test_specialist_adapters.py  test_subito_adapter.py  test_terminal_report.py  test_types.py  test_watch.py
(+26 files in other folders)
