[project]
name = "ducati-parts-finder"
version = "0.1.0"
description = "Find used Ducati parts across European marketplaces"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "playwright>=1.42",
    "beautifulsoup4>=4.12",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pillow>=10.0",
]

[tool.pytest.ini_options]
testpaths = ["test_scripts"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
